--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Redirecting…</title>
 
   <!-- Auto-redirect to main.html -->
-  <meta http-equiv="refresh" content="0; url=https://55club.game/#/login">
+  <meta http-equiv="refresh" content="0; url=https://www.dmwin.in/#/login">
 
   <style>
     body {
@@ -30,7 +30,7 @@
     Redirecting…
     <noscript>
       <p>Automatic redirect didn’t work.
-         <a href="https://55club.game/#/login">Click here</a> to continue.</p>
+         <a href="https://www.dmwin.in/#/login">Click here</a> to continue.</p>
     </noscript>
   </div>
 </body>
