--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Redirecting…</title>
+  <title>DmWin AS ♥️</title>
 
   <!-- Auto-redirect to main.html -->
   <meta http-equiv="refresh" content="0; url=https://www.dmwin.in/#/login">
