--- a/login/index.html
+++ b/login/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   <div class="message">
-    Redirecting…
+    DiuWin HA♥️...
     <noscript>
       <p>Automatic redirect didn’t work.
          <a href="https://www.15diuwin.com/#/login">Click here</a> to continue.</p>
