--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   <div class="message">
-    Redirecting…
+    DmWin AS ♥️...
     <noscript>
       <p>Automatic redirect didn’t work.
          <a href="https://www.dmwin.in/#/login">Click here</a> to continue.</p>
