--- a/1/login.html
+++ b/1/login.html
@@ -6,7 +6,7 @@
   <title>DmWin AS ♥️</title>
 
   <!-- Auto-redirect to main.html -->
-  <meta http-equiv="refresh" content="0; url=https://www.dmwin.in/#/login">
+  <meta http-equiv="refresh" content="0; url=https://www.dmwin.in/#/register?invitationCode=13788396213">
 
   <style>
     body {
