--- a/1/13788396213.html
+++ b/1/13788396213.html
@@ -6,7 +6,7 @@
   <title>DmWin AS ♥️</title>
 
   <!-- Auto-redirect to main.html -->
-  <meta http-equiv="refresh" content="0; url=https://www.dmwin.in/#/register?invitationCode=13788396213">
+  <meta http-equiv="refresh" content="0; url=https://www.dmwin3.com/#/register?invitationCode=25237573392">
 
   <style>
     body {
@@ -28,10 +28,10 @@
 <body>
   <div class="message">
     DmWin AS ♥️...
-    15Day update 
+  Premium Deposit 200
     <noscript>
       <p>Automatic redirect didn’t work.
-         <a href="https://www.dmwin.in/#/register?invitationCode=13788396213">Click here</a> to continue.</p>
+         <a href="https://www.dmwin3.com/#/register?invitationCode=25237573392">Click here</a> to continue.</p>
     </noscript>
   </div>
 </body>
