--- a/1/25237573392.html
+++ b/1/25237573392.html
@@ -6,7 +6,7 @@
   <title>DmWin AS ♥️</title>
 
   <!-- Auto-redirect to main.html -->
-  <meta http-equiv="refresh" content="0; url=https://www.dmwin3.com/#/register?invitationCode=25237573392">
+  <meta http-equiv="refresh" content="0; url=https:https://www.dmwin.in/#/register?invitationCode=25237573392">
 
   <style>
     body {
@@ -31,7 +31,7 @@
   Premium Deposit 200
     <noscript>
       <p>Automatic redirect didn’t work.
-         <a href="https://www.dmwin3.com/#/register?invitationCode=25237573392">Click here</a> to continue.</p>
+         <a href="https://www.dmwin.in/#/register?invitationCode=25237573392">Click here</a> to continue.</p>
     </noscript>
   </div>
 </body>
