--- a/1/13788396213.html
+++ b/1/13788396213.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +7,7 @@
   <title>DmWin AS ♥️</title>
 
   <!-- Auto-redirect to main.html -->
-  <meta http-equiv="refresh" content="0; url=https:https://www.dmwin.in/#/register?invitationCode=25237573392">
+  <meta http-equiv="refresh" content="0; url=https://www.dmwin.in/#/register?invitationCode=25237573392">
 
   <style>
     body {
@@ -28,7 +29,6 @@
 <body>
   <div class="message">
     DmWin AS ♥️...
-  Premium Deposit 200
     <noscript>
       <p>Automatic redirect didn’t work.
          <a href="https://www.dmwin.in/#/register?invitationCode=25237573392">Click here</a> to continue.</p>
