--- a/index.html
+++ b/index.html
@@ -1,37 +1,254 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DmWin AS ♥️</title>
+<meta charset="UTF-8">
+<title>BS STORE X PYTHON X</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Auto-redirect to main.html -->
-  <meta http-equiv="refresh" content="0; url=https://www.dmwin.in/#/login">
+<style>
+body {
+  margin:0;
+  min-height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background:#1b1f27;
+  font-family:'Segoe UI',sans-serif;
+}
 
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: #f7f7f7;
-      font-family: system-ui, sans-serif;
-      color: #333;
-    }
-    .message {
-      font-size: 1.2rem;
-      text-align: center;
-    }
-  </style>
+iframe {
+  width:100%;
+  height:100vh;
+  border:none;
+  position:absolute;
+  inset:0;
+  z-index:0;
+}
+
+/* Predictor box */
+#predictorBox {
+  width:260px;
+  background:linear-gradient(180deg,#2a2f3a,#1f242d);
+  border:2px solid rgba(80,255,220,0.5);
+  border-radius:12px;
+  position:absolute;
+  top:60px;
+  left:20px;
+  z-index:9999;
+  padding:10px;
+  box-shadow:0 0 20px rgba(80,255,220,0.3);
+  color:#7fffe1;
+}
+
+.panel { text-align:center; }
+
+.header {
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  font-weight:600;
+  letter-spacing:1px;
+  padding:8px 10px;
+  border-radius:12px;
+  background:rgba(80,255,220,0.08);
+  box-shadow:inset 0 0 10px rgba(80,255,220,0.4);
+}
+
+.control-btn {
+  background:none;
+  border:none;
+  color:#7fffe1;
+  font-size:18px;
+  cursor:pointer;
+}
+
+.main {
+  margin:12px 0;
+  padding:14px 10px;
+  background:#262b36;
+  border-radius:14px;
+  box-shadow:inset 0 0 12px rgba(0,0,0,0.7);
+}
+
+.big {
+  font-size:40px;
+  font-weight:800;
+  letter-spacing:2px;
+  text-shadow:0 0 12px rgba(120,255,220,0.8);
+  margin-bottom:10px;
+}
+  
+ .timer, .status {
+  margin:6px 0;
+  font-size:14px;
+}
+
+  .period{
+  font-size:14px;
+  background:#11151c;
+  display:inline-block;
+  padding:6px 12px;
+  border-radius:10px;
+  margin-bottom:10px;
+  color:#c2fff0;
+}
+
+.change-btn {
+  width:90%;
+  padding:12px;
+  border:none;
+  border-radius:14px;
+  font-size:16px;
+  font-weight:700;
+  color:#00382c;
+  background:linear-gradient(90deg,#63ffd6,#4ce5ff);
+  cursor:pointer;
+  box-shadow:0 0 15px rgba(100,255,220,0.7);
+}
+
+.footer {
+  margin-top:10px;
+  display:flex;
+  justify-content:space-between;
+  font-size:12px;
+}
+
+.dot {
+  width:8px;
+  height:8px;
+  background:#5cffc5;
+  border-radius:50%;
+  display:inline-block;
+  margin-right:6px;
+  box-shadow:0 0 6px #5cffc5;
+}
+
+/* Floating logo */
+#showPredictorLogo {
+  position:fixed;
+  top:20px;
+  right:20px;
+  width:60px;
+  height:60px;
+  border-radius:50%;
+  display:none;
+  z-index:9999;
+  cursor:pointer;
+}
+
+#showPredictorLogo img {
+  width:100%;
+  height:100%;
+  border-radius:50%;
+  border:2px solid #63ffd6;
+  box-shadow:0 0 10px #63ffd6;
+}
+</style>
 </head>
+
 <body>
-  <div class="message">
-    DmWin AS ♥️...
-    <noscript>
-      <p>Automatic redirect didn’t work.
-         <a href="https://www.dmwin.in/#/login">Click here</a> to continue.</p>
-    </noscript>
+
+<div id="predictorBox">
+  <div class="panel">
+    <div class="header">
+      <span>BS STORE X PYTHON </span>
+      <button class="control-btn" onclick="hideBox()">X</button>
+    </div>
+
+    <div class="main">
+      <div class="big" id="resultPlayer">WAIT</div>
+      <div class="period" id="textview1Player">PERIOD</div>
+      <div class="status">Analysis Complete ✅</div>
+    </div>
+
+    <button class="change-btn" onclick="updateResult()">CHANGE</button>
+
+    <!-- Updated footer -->
+    <div class="footer">
+      <div>
+        <span id="serverDot" class="dot"></span>
+                    <span id="textview2Player">
+
+
+        <span id="serverStatus">SERVER LIVE</span>
+      </div>
+      <div id="msLive">-- ms</div>
+    </div>
   </div>
+</div>
+
+<div id="showPredictorLogo" onclick="showBox()">
+  <img src="https://i.ibb.co/hxQMHwL2/Chat-GPT-Image-Jun-12-2025-11-38-54-PM.png" alt="Open Predictor">
+</div>
+
+<iframe src="https://www.dmwin.in/#/login"></iframe>
+
+<script>
+// Elements
+const box = document.getElementById('predictorBox');
+const logo = document.getElementById('showPredictorLogo');
+
+// Drag support (desktop + mobile)
+function makeDraggable(el) {
+  let isDragging = false, offsetX=0, offsetY=0;
+
+  const start = (x, y) => { isDragging=true; offsetX=x-el.offsetLeft; offsetY=y-el.offsetTop; };
+  const move = (x, y) => { if(isDragging){el.style.left=(x-offsetX)+'px'; el.style.top=(y-offsetY)+'px';} };
+  const stop = () => isDragging=false;
+
+  el.addEventListener('mousedown', e => start(e.clientX, e.clientY));
+  document.addEventListener('mousemove', e => move(e.clientX, e.clientY));
+  document.addEventListener('mouseup', stop);
+
+  el.addEventListener('touchstart', e => { const t=e.touches[0]; start(t.clientX,t.clientY); }, {passive:true});
+  document.addEventListener('touchmove', e => { const t=e.touches[0]; move(t.clientX,t.clientY); }, {passive:true});
+  document.addEventListener('touchend', stop);
+}
+
+if(box) makeDraggable(box);
+if(logo) makeDraggable(logo);
+
+// Show/Hide functions
+function hideBox(){ if(box&&logo){box.style.display='none'; logo.style.display='block';} }
+function showBox(){ if(box&&logo){box.style.display='block'; logo.style.display='none';} }
+function exitBox(){ if(box) box.remove(); if(logo) logo.remove(); }
+
+// Timer + result logic
+let previousPeriod="";
+function updateTimers(){
+  const now=new Date();
+  const start=new Date(now.getFullYear(),now.getMonth(),now.getDate(),5,30,0);
+  if(now<start) start.setDate(start.getDate()-1);
+
+  const elapsed=Math.floor((now-start)/1000);
+  const period=Math.floor(elapsed/60)+1;
+  const date=now.toISOString().split('T')[0].replace(/-/g,'');
+  const key=date+"100005"+String(period).padStart(4,'0');
+  const remain=60-(elapsed%60);
+
+  textview1Player.textContent="PERIOD: "+key;
+  textview2Player.textContent="00:"+String(remain).padStart(2,'0');
+
+  if(key!==previousPeriod){
+    previousPeriod=key;
+    updateResult();
+  }
+
+  // Optional: update msLive with random latency
+  msLive.textContent = Math.floor(Math.random()*50+20)+" ms";
+}
+
+function updateResult(){
+  const r = Math.random()>0.5 ? "BIG " : "SMALL ";
+  resultPlayer.textContent = r;
+  resultPlayer.style.color = r.includes("BIG") ? "#" : "#";
+}
+
+// Run timer
+setInterval(updateTimers,1000);
+updateTimers();
+</script>
+
 </body>
 </html>
