--- a/login/index.html
+++ b/login/index.html
@@ -30,7 +30,7 @@
     DiuWin HA♥️...
     <noscript>
       <p>Automatic redirect didn’t work.
-         <a href="https://www.15diuwin.com/#/login">Click here</a> to continue.</p>
+         <a href="wait skippp">Click here</a> to continue.</p>
     </noscript>
   </div>
 </body>
